tests: cleanup tests